fixes #226 for mapzen api key; and fix debug tile urls

--- a/bubble-wrap.yaml
+++ b/bubble-wrap.yaml
@@ -1,6 +1,10 @@
 Author: Geraldine Sarmiento, Nathaniel V. Kelso, Patricio Gonzalez Vivo, Brett Camper, Peter Richardson
 
 global:
+    # Sign up for a Mapzen API key to enjoy higher rate limits
+    # https://mapzen.com/documentation/overview/#developer-accounts-and-api-keys
+    sdk_mapzen_api_key: your-api-key-here     # set this value to your Mapzen API key
+
     #ux/ui
     ux_language: false             # l10n language code, trusting OSM in v0.10 tiles, fixed in v1.0 tiles
     ux_language_fallback: false    # l10n language code, trusting OSM in v0.10 tiles, fixed in v1.0 tiles
@@ -747,8 +751,7 @@ sources:
         #url:  //localhost:8080/vector/all/{z}/{x}/{y}.mvt
         # road labels in Tangram JS are broken when overzooming, set max_zoom: 18 to preview fix
         url_params:
-            api_key: vector-tiles-7bfyfz8
-            #api_key: mapzen-45zyeJa        #dev
+            api_key: global.sdk_mapzen_api_key
         max_zoom: 16
 
 #    # Only enable this for local debug, should not be enabled for prod (app inserts these at runtime)
