--- a/bubble-wrap.yaml
+++ b/bubble-wrap.yaml
@@ -826,23 +826,10 @@ styles:
         base: lines
         dash: [2.0, 1.0]
         dash_background_color: [0.808,0.860,0.851]
-    dashedline:
+    dashed_steps:
         base: lines
-        texcoords: true
-        shaders:
-            defines:
-                background: vec3(0.867, 0.867, 0.867)
-            blocks:
-                color: |
-                    // blend line 50/50 between two colors
-                    float t = fract(v_texcoord.y);
-                    float e = 0.1; // edge feather
-                    vec3 v = vec3(
-                        smoothstep(.0, e, t) *
-                        (1. - smoothstep(.5, .5 + e, t))
-                    );
-                    color.rgb = mix(color.rgb, background, v);
-
+        dash: [0.5, 0.5]
+        dash_background_color: [0.867, 0.867, 0.867]
     tools-tilecoords:
         shaders:
             blocks:
@@ -856,7 +843,6 @@ styles:
                     #endif
                 position: |
                     v_pos = modelPosition().xy;
-
     tools-aastep:
         shaders:
             extensions: OES_standard_derivatives
@@ -874,7 +860,6 @@ styles:
                             return step(threshold, value);
                         #endif
                     }
-
     tools-grid:
         mix: tools-tilecoords
         shaders:
@@ -897,26 +882,14 @@ styles:
                         return mix(TileGrid(1.), TileGrid(2.), fract(u_map_position.z));
                     }
                     #endif
-
-    tools-vignette:
-        shaders:
-            blocks:
-                global: |
-                    float vignette(vec2 pos) {
-                        vec2 st = pos / u_resolution.xy - vec2(.5);
-                        return dot(st, st) + 0.05;
-                    }
-
     grid:
         base: polygons
-        mix: [tools-vignette, tools-grid]
+        mix: [tools-grid]
         shaders:
             blocks:
                 filter: |
                     color.rgb = vec3(0.899, 0.95, 1.0);
-                    color.rgb -= vignette(gl_FragCoord.xy) * 0.1;
                     color.rgb = mix(color.rgb, vec3(0.639, 0.886, 0.906), TileGrid());
-
     water_border:
         base: lines
         texcoords: true
@@ -937,7 +910,6 @@ styles:
                     vec2 st = v_texcoord.xy;
                     float pattern = aastep(.5, pulse(st.x, .75, .15) + pulse(st.x, .4, .10) + pulse(st.x, .1, .1));
                     color.rgb = mix(color.rgb, vec3(0.675,0.855,0.886), pattern);
-
     shapes-circle:
         shaders:
             blocks:
@@ -960,7 +932,6 @@ styles:
                         st.x += step(1., mod(st.y, 2.0)) * 0.5;
                         return fract(st);
                     }
-
     pattern-dots:
         mix: [tools-tilecoords, tiling-brick, shapes-circle, tools-aastep]
         shaders:
@@ -986,8 +957,7 @@ styles:
                             return aastep(size, d);
                         }
                     #endif
-
-    dots2:
+    dots:
         base: polygons
         mix: pattern-dots
         shaders:
@@ -1062,34 +1032,6 @@ styles:
                         color.rgb = mix(color.rgb, vec3(0.),
                                         texture2D(u_tex_grid, v_texcoord).a);
                     }
-
-    # building-grid-univ:
-    #     mix: building-grid
-    #     shaders:
-    #         defines:
-    #             ROOF_COLOR: vec3(0.922,0.894,0.862)
-    #             WALL_COLOR: vec3(0.658,0.617,0.576)
-
-    # building-grid-parks:
-    #     mix: building-grid
-    #     shaders:
-    #         defines:
-    #             ROOF_COLOR: vec3(0.847,0.886,0.882)
-    #             WALL_COLOR: vec3(0.627,0.722,0.718)
-
-    # building-grid-hospital:
-    #     mix: building-grid
-    #     shaders:
-    #         defines:
-    #             ROOF_COLOR: vec3(0.941,0.894,0.898)
-    #             WALL_COLOR: vec3(0.692,0.575,0.586)
-
-    # building-grid-retail:
-    #     mix: building-grid
-    #     shaders:
-    #         defines:
-    #             ROOF_COLOR: vec3(0.945,0.898,0.878)
-    #             WALL_COLOR: vec3(0.725,0.694,0.678)
 
     building-lines:
         base: lines
@@ -3264,7 +3206,7 @@ layers:
                     - kind: path
                     - kind_detail: steps
             draw:
-                dashedline:
+                dashed_steps:
                     order: global.feature_order
                     color: [0.97,0.97,0.97]
                     width: [[14,0.6px],[16,2px],[17,4px],[18,5px],[19,8px],[20,10px]]
@@ -3274,21 +3216,21 @@ layers:
             in_park:
                 filter: { landuse_kind: [park,nature_reserve,conservation,golf_course,garden] }
                 draw:
-                    dashedline:
+                    dashed_steps:
                         color: [1.0,1.0,1.0]
                         outline:
                             color: [0.867,0.867,0.867]
             in_university:
                 filter: { landuse_kind: university }
                 draw:
-                    dashedline:
+                    dashed_steps:
                         color: [1.0,1.0,1.0]
                         outline:
                             color: [0.867,0.867,0.867]
             in_hospital:
                 filter: { landuse_kind: hospital }
                 draw:
-                    dashedline:
+                    dashed_steps:
                         color: [1.0,1.0,1.0]
                         outline:
                             color: [0.867,0.867,0.867]
@@ -5398,7 +5340,7 @@ layers:
     landuse:
         data: { source: mapzen }
         draw:
-            dots2:
+            dots:
                 order: global.feature_order
                 visible: false
             dots-rev:
@@ -5476,7 +5418,7 @@ layers:
                     - not: { operator: [ "United States Forest Service" ] }
                     - protect_class: ['2','3','5']
             draw:
-                dots2:
+                dots:
                     color: [[4,[0.655,0.800,0.796]],[8,[0.588,0.780,0.773]]]
                     # todo: what is this?
                     order: 18
@@ -5488,7 +5430,7 @@ layers:
                         - operator: [ "United States National Park Service" ]
                         - protect_class: ['2','3','5']
                 draw:
-                    dots2:
+                    dots:
                         color: [[4,[0.525,0.765,0.686]],[9,[0.416,0.737,0.631]]]
                         order: 19
                         visible: true
@@ -5501,7 +5443,7 @@ layers:
                     - kind: [protected_area, nature_reserve, national_park]
                     - not: { protect_class: ['2','3','5'] }
             draw:
-                dots2:
+                dots:
                     # effectively the wilderness color
                     color: [[0,[0.442,0.960,0.865]],[11,[0.2,0.850,0.765]]] #red #[0.420,0.808,0.698]
                     visible: true
@@ -5514,7 +5456,7 @@ layers:
                     - protect_class: ['6']
                     - operator: ['United States Forest Service']
             draw:
-                dots2:
+                dots:
                     color: [0.442,0.960,0.865] #*green7
                     visible: true
 
@@ -5524,13 +5466,13 @@ layers:
                 kind: [farm, farmland]
                 $zoom: { min: 10}
             draw:
-                dots2:
+                dots:
                     color: [0.600,0.790,0.714]
                     visible: global.green4_v
         forest-landcover:
             filter: { kind: [forest, natural_forest, wood, natural_wood, natural_park], $zoom: { min: 10 }, not: { operator: "United States Forest Service" } }
             draw:
-                dots2:
+                dots:
                     color: [0.70,0.990,0.92] #[0.486,0.839,0.722]
                     visible: true
 
@@ -5544,7 +5486,7 @@ layers:
                     - not: { protect_class: ['2','3','5','6'] }
             # default for national forests and more?
             draw:
-                dots2:
+                dots:
                     # color: [[4,[0.655,0.800,0.796]],[11,[0.588,0.780,0.773]],[12,[0.242,0.737,0.712]],[14,[0.412,0.733,0.718]],[15,[0.635,0.792,0.788]]]
                     color: [[4,[0.655,0.800,0.796]],[11,[0.588,0.780,0.773]],[12,[0.635,0.792,0.788]]]
                     visible: true
@@ -5555,13 +5497,13 @@ layers:
                         - kind: national_park
                         - not: [ protect_class: ['2','3','5','6'], operator: [ "United States National Park Service"] ]
                 draw:
-                    dots2:
+                    dots:
                         color: [[4,[0.525,0.765,0.686]],[9,[0.416,0.737,0.631]]]
         urban:
             filter: { kind: [urban, rural, residential] }
             visible: global.earth2_v
             draw:
-                dots2:
+                dots:
                     color: [[0, global.earth2],[9, global.earth2]]
                     visible: global.earth2_v
         #TIER 3
@@ -5569,21 +5511,21 @@ layers:
             filter:
                 kind: aerodrome
             draw:
-                dots2:
+                dots:
                     color: [0.805,0.805,0.825]
                     visible: true
         military:
             filter:
                 kind: military
             draw:
-                dots2:
+                dots:
                     color: [0.722,0.769,0.827]
                     visible: true
         university:
             filter:
                 kind: [university, college]
             draw:
-                dots2:
+                dots:
                     color: [0.827,0.753,0.682]
                     visible: true
         #TIER 4
@@ -5591,28 +5533,28 @@ layers:
             filter:
                 kind: cemetery
             draw:
-                dots2:
+                dots:
                     color: global.green2
                     visible: true
         commercial:
             filter:
                 kind: commercial
             draw:
-                dots2:
+                dots:
                     color: [0.855,0.748,0.667]
                     visible: global.grey1_v
         golf_course:
             filter:
                 kind: golf_course
             draw:
-                dots2:
+                dots:
                     color: [0.353,0.812,0.545]
                     visible: true
         hospital:
             filter:
                 kind: hospital
             draw:
-                dots2:
+                dots:
                     color: [0.843,0.624,0.647]
                     visible: true
         industrial:
@@ -5625,7 +5567,7 @@ layers:
         power:
             filter: { kind: [plant, generator, substation] }
             draw:
-                dots2:
+                dots:
                     color: [0.679,0.679,0.679]
                     visible: true
         railway:
@@ -5639,53 +5581,53 @@ layers:
             filter:
                 kind: sports_centre
             draw:
-                dots2:
+                dots:
                     color: global.green10
         recreation_ground:
             filter:
                 kind: recreation_ground
             draw:
-                dots2:
+                dots:
                     color: global.green1
                     visible: true
         retail:
             filter:
                 kind: retail
             draw:
-                dots2:
+                dots:
                     color: [0.955,0.752,0.650]
                     visible: global.grey1_v
         stadium:
             filter:
                 kind: stadium
             draw:
-                dots2:
+                dots:
                     color: [0.624,0.690,0.761]
                     visible: true
         zoo:
             filter:
                 kind: [zoo, wildlife_park]
             draw:
-                dots2:
+                dots:
                     color: [0.498,1.000,0.851]
                     visible: true
         winter_sports:
             filter:
                 kind: winter_sports
             draw:
-                dots2:
+                dots:
                     color: global.grey8
                     visible: global.grey8_v
         man-made:
             filter: { kind: [pier,wastewater_plant,works,bridge,tower,breakwater,water_works,groyne,dike,cutline] }
             draw:
-                dots2:
+                dots:
                     color: [0.690,0.690,0.690]
                     visible: true
             pier:
                 filter: { kind: [pier,bridge,breakwater,groyne,dike,cutline] }
                 draw:
-                    dots2:
+                    dots:
                         color: [0.679,0.679,0.679]
                         visible: true
         #TIER 5
@@ -5698,14 +5640,14 @@ layers:
                     - winery
                     - maze
             draw:
-                dots2:
+                dots:
                     color: global.grey10
                     visible: true
         beach:
            filter:
                kind: beach
            draw:
-               dots2:
+               dots:
                    color: [0.780,0.740,0.538]
                    visible: true
         #TIER 6
@@ -5713,7 +5655,7 @@ layers:
             filter:
                 kind: [garden, allotments]
             draw:
-                dots2:
+                dots:
                     color: [0.604,0.973,0.722]
                     visible: true
         parking:
@@ -5725,27 +5667,27 @@ layers:
                     - { $zoom: { min: 14 }, area: { min: 10000 } }
                     - { $zoom: { min: 15 }, area: { min: 5000 } }
             draw:
-                dots2:
+                dots:
                     color: [0.765,0.765,0.765]
                     visible: global.grey1_v
             early:
                 filter: { $zoom: { max: 15 } }
                 draw:
-                    dots2:
+                    dots:
                         color: global.grey1_e
                         visible: true
         pedestrian:
             filter:
                 kind: [pedestrian,common]
             draw:
-                dots2:
+                dots:
                     color: [0.740,0.740,0.740]
                     visible: global.grey1_v
             green-stuff:
                 filter:
                     surface: [grass]
                 draw:
-                    dots2:
+                    dots:
                         color: [0.584,0.843,0.792]
         # glacier:
         #     filter:
@@ -5759,14 +5701,14 @@ layers:
         pitch:
             filter: { kind: pitch }
             draw:
-                dots2:
+                dots:
                     color: [0.490,0.812,0.631]
                     visible: true
         place_of_worship:
             filter:
                 kind: place_of_worship
             draw:
-                dots2:
+                dots:
                     color: [0.910,0.972,1.000]
                     visible: global.grey1_v
         playground:
@@ -5780,7 +5722,7 @@ layers:
             filter:
                 kind: school
             draw:
-                dots2:
+                dots:
                     color: [0.749,0.722,0.694]
                     visible: true
 
@@ -5792,7 +5734,7 @@ layers:
                     - wilderness_hut
                     - hanami
             draw:
-                dots2:
+                dots:
                     color: [0.765,0.765,0.765]
                     visible: true
 
@@ -5838,7 +5780,7 @@ layers:
                 - petting_zoo
                 - aviary
         draw:
-            dots2:
+            dots:
                 order: global.feature_order
                 visible: false
             dots-rev:
@@ -5877,7 +5819,7 @@ layers:
                     - water_slide
                     - carousel
             draw:
-                dots2:
+                dots:
                     color: global.grey12
                     visible: true
         minor-zoo-landuse:
@@ -5888,7 +5830,7 @@ layers:
                     - petting_zoo
                     - aviary
             draw:
-                dots2:
+                dots:
                     color: global.green11
                     visible: true
     landuse_urban_area-early:
@@ -5897,7 +5839,7 @@ layers:
             # This is from Natural Earth and only shows up from zoom(0,9)
             kind: [urban_area, 'urban area']
         draw:
-            dots2:
+            dots:
                 visible: global.earth2_ev
                 order: global.feature_order
                 color: [[4,[0.965,0.600,0.882]],[6,[0.965,0.600,0.882]],[7,[0.882,0.639,0.827]],[8,[0.757,0.729,0.753]]]
