--- a/bubble-wrap.yaml
+++ b/bubble-wrap.yaml
@@ -876,7 +876,7 @@ styles:
                         float pct = 0.0;
                         float press = 0.4 + (1.0 - fract(u_map_position.z)) * 0.1;
                         if (grid(st, 0.01, press)) { pct += 0.5; }
-                        if (grid(st, 0.1, press)) { pct += 0.1; }
+                        if (grid(st, 0.1, press)) { pct += 0.15; }
                         return pct;
                     }
                     float TileGrid() {
@@ -890,7 +890,7 @@ styles:
             blocks:
                 filter: |
                     color.rgb = vec3(0.899, 0.95, 1.0);
-                    color.rgb = mix(color.rgb, vec3(0.639, 0.886, 0.906), TileGrid());
+                    color.rgb = mix(color.rgb, vec3(0.654,0.856,0.896), TileGrid());
     water_border:
         base: lines
         texcoords: true
