--- a/bubble-wrap.yaml
+++ b/bubble-wrap.yaml
@@ -4678,7 +4678,7 @@ layers:
                 draw: { icons: { visible: global.icon_visible_poi_landuse_e } }
 
         # NOTE: all natural_* should only be in landuse layer
-        suppress icon-always:
+        suppress-icon-always:
             filter:
                 kind: [natural_forest, natural_park, natural_wood]
             draw:
@@ -4759,7 +4759,7 @@ layers:
             hide-until-z17-any:
                 filter:
                     $zoom: { max: 17 }
-                    kind: [bank, bus_stop, car_sharing, wood]
+                    kind: [bank, bus_stop, car_sharing, wood, platform]
                 draw:
                     icons:
                         visible: false
