fix return typo in transit overlay station

--- a/bubble-wrap.yaml
+++ b/bubble-wrap.yaml
@@ -3593,7 +3593,7 @@ layers:
             filter:
                 all:
                     - landuse_kind: [station]
-                    - function() { retrun global.sdk_transit_overlay; }
+                    - function() { return global.sdk_transit_overlay; }
             draw:
                 polygons:
                     color: '#bdadbf'
