--- a/bubble-wrap.yaml
+++ b/bubble-wrap.yaml
@@ -210,33 +210,33 @@ global:
     text_visible_address:           true
     text_visible_water_labels:      true
     text_visible_island:            true
-    label_visible_landuse_green:    true         #this needs work
-    icon_visible_landuse_green:     true         #this needs work
+    label_visible_landuse_green:    true
+    icon_visible_landuse_green:     true     # needs work
     text_visible_landuse_green:     true
-    icon_size_green:                [[13, '14px'], [16, '18px'], [18, '19px']]      # 0px for no, default, more  [[13, 14px], [16, 18px], [18, 19px]]
-    icon_size_green_l:              [[14, '24px'],[16, '32px']]                     # 0px for no, default, more  [[14,24px],[16,32px]]
-    label_visible_poi_landuse:      true         #false on default
-    icon_visible_poi_landuse:       true
-    text_visible_poi_landuse:       true
-    label_visible_poi_landuse_e:    true         # true by default
-    icon_visible_poi_landuse_e:     true         # true by default
-    text_visible_poi_landuse_e:     true         # true by default
-    text_visible_landuse_generic:   true
-    label_visible_station:          true
-    icon_visible_station:           true
-    text_visible_station:           true
+    icon_size_green:                [[0, '0px']]    # 0px for no, default, more  [[13, 14px], [16, 18px], [18, 19px]]
+    icon_size_green_l:              [[0, '0px']]    # 0px for no, default, more  [[14,24px],[16,32px]]
+    label_visible_poi_landuse:      true
+    icon_visible_poi_landuse:       false     # false for default
+    text_visible_poi_landuse:       false     # false for default
+    label_visible_poi_landuse_e:    true
+    icon_visible_poi_landuse_e:     false     # false for default
+    text_visible_poi_landuse_e:    true
+    text_visible_landuse_generic:   false     # false for default
+    label_visible_station:          false     # false for default
+    icon_visible_station:           false     # false for default
+    text_visible_station:           false     # false for default
     text_visible_highway:           true
-    text_visible_highway_e:         true          # true by default
+    text_visible_highway_e:         false     # false for default, false for more
     text_visible_trunk_primary:     true
     text_visible_trunk_primary_route: true        # true by default
-    text_visible_trunk_primary_e2:  true          # true by default
-    text_visible_trunk_primary_e:   true          # true by default
+    text_visible_trunk_primary_e2:  false     # false for default, false for more
+    text_visible_trunk_primary_e:   false     # false for default, false for more
     text_visible_secondary:         true
-    text_visible_secondary_e:       true          # true by default
+    text_visible_secondary_e:       false     # false for default, false for more
     text_visible_tertiary:          true
-    text_visible_tertiary_e:        true          # true by default
+    text_visible_tertiary_e:        false     # false for default, false for more
     text_visible_minor_road:        true
-    text_visible_minor_road_e:      true          # true by default
+    text_visible_minor_road_e:      true
     text_visible_service_road:      true
     text_visible_path:              true
     text_visible_piste:             true
@@ -245,7 +245,7 @@ global:
     text_visible_airport_gate:      true
     sdk_road_shields:               true
     text_visible_exits:             true
-    text_visible_exits_e:           true          # true by default // not used in Bubble Wrap?
+    text_visible_exits_e:           false     # false for default, false for more
     #
     #label styling
     text_fill: [0.300, 0.300, 0.300]         # BLACK
