--- a/bubble-wrap-style-no-labels.yaml
+++ b/bubble-wrap-style-no-labels.yaml
@@ -200,51 +200,51 @@ global:
     feature_order: function() { return feature.sort_rank; }
     #
     #label visibility
-    text_visible_continent:         true
-    text_visible_admin:             true
-    text_visible_populated_places:  true
-    icon_visible_populated_places:  true
-    text_visible_neighbourhoods:    true
-    text_visible_neighbourhoods_e:  true
-    text_visible_building:          true
-    text_visible_address:           true
-    text_visible_water_labels:      true
-    text_visible_island:            true
-    label_visible_landuse_green:    true
-    icon_visible_landuse_green:     true     # needs work
-    text_visible_landuse_green:     true
+    text_visible_continent:         false
+    text_visible_admin:             false
+    text_visible_populated_places:  false
+    icon_visible_populated_places:  false
+    text_visible_neighbourhoods:    false
+    text_visible_neighbourhoods_e:  false
+    text_visible_building:          false
+    text_visible_address:           false
+    text_visible_water_labels:      false
+    text_visible_island:            false
+    label_visible_landuse_green:    false
+    icon_visible_landuse_green:     false     # needs work
+    text_visible_landuse_green:     false
     icon_size_green:                [[0, '0px']]    # 0px for no, default, more  [[13, 14px], [16, 18px], [18, 19px]]
     icon_size_green_l:              [[0, '0px']]    # 0px for no, default, more  [[14,24px],[16,32px]]
-    label_visible_poi_landuse:      true
+    label_visible_poi_landuse:      false
     icon_visible_poi_landuse:       false     # false for default
     text_visible_poi_landuse:       false     # false for default
-    label_visible_poi_landuse_e:    true
+    label_visible_poi_landuse_e:    false
     icon_visible_poi_landuse_e:     false     # false for default
-    text_visible_poi_landuse_e:    true
+    text_visible_poi_landuse_e:    false
     text_visible_landuse_generic:   false     # false for default
     label_visible_station:          false     # false for default
     icon_visible_station:           false     # false for default
     text_visible_station:           false     # false for default
-    text_visible_highway:           true
+    text_visible_highway:           false
     text_visible_highway_e:         false     # false for default, false for more
-    text_visible_trunk_primary:     true
-    text_visible_trunk_primary_route: true        # true by default
+    text_visible_trunk_primary:     false
+    text_visible_trunk_primary_route: false        # true by default
     text_visible_trunk_primary_e2:  false     # false for default, false for more
     text_visible_trunk_primary_e:   false     # false for default, false for more
-    text_visible_secondary:         true
+    text_visible_secondary:         false
     text_visible_secondary_e:       false     # false for default, false for more
-    text_visible_tertiary:          true
+    text_visible_tertiary:          false
     text_visible_tertiary_e:        false     # false for default, false for more
-    text_visible_minor_road:        true
-    text_visible_minor_road_e:      true
-    text_visible_service_road:      true
-    text_visible_path:              true
-    text_visible_piste:             true
-    text_visible_steps:             true
-    text_visible_aerialway:         true
-    text_visible_airport_gate:      true
-    sdk_road_shields:               true
-    text_visible_exits:             true
+    text_visible_minor_road:        false
+    text_visible_minor_road_e:      false
+    text_visible_service_road:      false
+    text_visible_path:              false
+    text_visible_piste:             false
+    text_visible_steps:             false
+    text_visible_aerialway:         false
+    text_visible_airport_gate:      false
+    sdk_road_shields:               false
+    text_visible_exits:             false
     text_visible_exits_e:           false     # false for default, false for more
     #
     #label styling
