--- a/bubble-wrap-style.yaml
+++ b/bubble-wrap-style.yaml
@@ -748,8 +748,8 @@ sources:
     mapzen:
         # EraserMaps the app only supports MVT format tiles
         type:  MVT #TopoJSON
-        #url:  https://tile.mapzen.com/mapzen/vector/v1/all/{z}/{x}/{y}.mvt
-        url:  http://tile.dev.mapzen.com/mapzen/vector/v1/all/{z}/{x}/{y}.mvt
+        url:  https://tile.mapzen.com/mapzen/vector/v1/all/{z}/{x}/{y}.mvt
+        #url:  http://tile.dev.mapzen.com/mapzen/vector/v1/all/{z}/{x}/{y}.mvt
         #url:  //localhost:8080/vector/all/{z}/{x}/{y}.mvt
         # road labels in Tangram JS are broken when overzooming, set max_zoom: 18 to preview fix
         url_params:
