--- a/bubble-wrap-style-more-labels.yaml
+++ b/bubble-wrap-style-more-labels.yaml
@@ -206,8 +206,8 @@ global:
     icon_visible_populated_places:  true
     text_visible_neighbourhoods:    true
     text_visible_neighbourhoods_e:  true
-    text_visible_building:          true
-    text_visible_address:           true
+    text_visible_building:          true     # false for default
+    text_visible_address:           true     # false for default
     text_visible_water_labels:      true
     text_visible_island:            true
     label_visible_landuse_green:    true
