--- a/bubble-wrap-style-no-labels.yaml
+++ b/bubble-wrap-style-no-labels.yaml
@@ -206,8 +206,8 @@ global:
     icon_visible_populated_places:  false
     text_visible_neighbourhoods:    false
     text_visible_neighbourhoods_e:  false
-    text_visible_building:          false
-    text_visible_address:           false
+    text_visible_building:          false     # false for default
+    text_visible_address:           false     # false for default
     text_visible_water_labels:      false
     text_visible_island:            false
     label_visible_landuse_green:    false
